# fin_cv

./: .gitignore  pyproject.toml  requirements.txt
fincv/: __init__.py
fincv/tests/: test_cross_validation.py
